--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
+  mobx: ^2.0.6+1
+
+  mobx_codegen: ^2.0.5+2
+
+  build_runner: ^2.1.7
+
+
   http: ^0.13.4
   shared_preferences: ^2.0.13
   flutter:
@@ -36,6 +44,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_mobx: ^2.0.4
 
 dev_dependencies:
   flutter_test:
