--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_mobx: ^2.0.4
+  sqflite: ^2.0.2
 
 dev_dependencies:
   flutter_test:
