--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+
 dependencies:
 
   mobx: ^2.0.6+1
@@ -46,6 +47,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_mobx: ^2.0.4
   sqflite: ^2.0.2
+  cached_network_image: ^3.2.0
+  connectivity_plus: ^2.2.1
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +71,12 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+
+  assets:
+    - assets/
+    - assets/sql
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
